--- a/dashboard/templates/dashboard/order_fulfillment.html
+++ b/dashboard/templates/dashboard/order_fulfillment.html
@@ -51,12 +51,23 @@
                     <label class="form-label visually-hidden">Supplier Order Id</label>
                     <input type="text" class="form-control" placeholder="Supplier Order Id">
                 </div>
+
+                <div class="col-md-6">
+                    <label class="form-label visually-hidden">Tracker Id</label>
+                    <input type="text" class="form-control" placeholder="Tracker Id">
+                </div>
+
+                 {# Row 5: Expected Delivery Date and Quantity#}
+                <div class="col-md-6">
+                    <label class="form-label visually-hidden">Expected Delivery Date</label>
+                    <input type="date" class="form-control" placeholder="mm/dd/yyyy">
+                </div>
                 <div class="col-md-6">
                     <label class="form-label visually-hidden">Quantity</label>
                     <input type="number" class="form-control" placeholder="Quantity">
                 </div>
 
-                {# Row 5: Amazon Order Id and Shipping Link (URL Input) #}
+                {# Row 6: Amazon Order Id and Shipping Link (URL Input) #}
                 <div class="col-md-6">
                     <label class="form-label visually-hidden">Amazon Order Id</label>
                     <input type="text" class="form-control" placeholder="Amazon Order Id">
@@ -66,15 +77,6 @@
                     <input type="url" class="form-control" placeholder="Paste Shipping Label URL Here">
                 </div>
 
-                {# Row 6: Expected Delivery Date and Tracker Id #}
-                <div class="col-md-6">
-                    <label class="form-label visually-hidden">Expected Delivery Date</label>
-                    <input type="date" class="form-control" placeholder="mm/dd/yyyy">
-                </div>
-                <div class="col-md-6">
-                    <label class="form-label visually-hidden">Tracker Id</label>
-                    <input type="text" class="form-control" placeholder="Tracker Id">
-                </div>
 
                 {# Row 7: Notes (Full Width) #}
                 <div class="col-12">
